syntax = "proto3";

option java_package = "com.ownd_project.tw2023_wallet_android.datastore";
option java_multiple_files = true;

message CredentialData {
  string id = 1;
  string format = 2;
  string credential = 3;
  string cNonce = 4;
  int32 cNonceExpiresIn = 5;
  string iss = 6;
  int64 iat = 7;
  int64 exp = 8;
  string type = 9;
  string accessToken = 10;
  string credentialIssuerMetadata = 11;
}

message CredentialDataList {
  repeated CredentialData items = 1;
}
